[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "walue_ai"
authors = [
    {name = "Walue AI", email = "contact@walueai.com"}
]
description = "AI-Powered Business Intelligence Platform"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=14.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]